--- a/styles.css
+++ b/styles.css
@@ -2,35 +2,49 @@ body {
   font-size: 17px; 
   font-weight: 900;
   font-family: 'Lato', sans-serif;
-  background: url("img/pool_table.png"); 
-  background-repeat: repeat;
 }
 
 nav {
     font-family: Arial;
     width: 100%;
-    line-height: 30px;
-    overflow: hidden;  
-    position: fixed;
-    background: #228b22;
-    z-index: 100;
-    opacity: 0.8;
+    background: #00a;
+    color: #FFF;
+    font-weight: 900;
 }
 
 
-nav > a {
+
+h3{
+  font-size: 1em;
+}
+
+
+
+#logo-tagline{
+  text-align: center;
+  float: right;
+  font-family: 'Cinzel Decorative', cursive;
+
+}
+
+
+#nav-buttons > a {
   
   display: inline-block;
-  padding: 10px;
   color: #FFF;
-  background: #32cd32;
+  background: #00a;
   text-align: center;
   text-decoration: none;
+  font-size: 1em;
+  line-height: 60px;
+  font-family: 'Cinzel Decorative', cursive;
+
 }
 
 #contact-container {
   text-align: center;
   width: 100%;
+  display: none;
 }
 
 #contact{
@@ -52,26 +66,13 @@ nav > a {
 }
 
 
-nav > a:hover, #contact > a:hover{
+#nav-buttons > a:hover{
   background: #FFF;
-  color: #0F0; 
+  color: #00F; 
 }
 
-#home{
-  height: 100px;
-}
 
-.banner{
-  z-index: 1;
-  margin: 0 auto;
-  line-height: 1.5em;
-  padding: 10px;
-  text-align: center;
-  border-radius: 15px;
-  min-height: 190px;
-}
-
-#first{
+#products{
   padding-bottom: 200px;
   color: #FFF;
   text-align: center;
@@ -81,126 +82,12 @@ nav > a:hover, #contact > a:hover{
   width: 80%;
 }
 
-.circle{
-  height: 180px;
-  width: 180px;
-  border-radius: 150px;
-  background-color: #00F;
-  position: relative;
-  margin: 0 auto;
-
-}
-
-#portfolio{
-  padding-bottom: 200px;
-}
-
-
-#finished-projects{
-  text-align: center;
-  margin-top: 20px;
-  max-width: 900px;
-}
-
-#current-projects{
-  text-align: center;
-  margin: 0 auto;
-  max-width: 900px;
-  padding-top: 80px;
-}
-
-
-/* project styling */
-
-.projects{
-  border-radius: 15px;
-}
-
-.projects > a {
-  margin: 10px;
-  background-color: #000;
-  width: 250px;
-  height: 250px;
-  text-decoration: none;
-  list-style-type: none;
-  border-radius: 15px;
-  display: inline-block;
-  border: 5px solid white;
-}
-
-
-
 .info {
   background: #000;
   color: #fff;
   overflow: hidden;
   height: 100%;
   border-radius: 15px;
-}
-
-
-
-#weather{
-  background: url('img/projects/weather.png') no-repeat;
-  background-size: 100%;
-  width: 250px;
-  height: 250px;
-}
-
-#wikiview{
-  background: url('https://dl.dropboxusercontent.com/s/zcz40h8e9dx4080/Screenshot%202016-11-17%20at%208.44.48%20PM.png?dl=0') -135px -22px no-repeat;
-  background-size: 500px;
-}
-
-
-#jscalc{
-  background: url('https://dl.dropboxusercontent.com/s/t01pwonra7pf80w/Screenshot%202016-11-17%20at%2010.19.19%20PM.png?dl=0') -10px 5px no-repeat;
-  background-size: 260px;
-}
-
-#pomodoro{
-background: url('https://dl.dropboxusercontent.com/s/boyccngys4hru5d/Screenshot%202016-11-17%20at%2010.23.31%20PM.png?dl=0') 5px 6px no-repeat;
-  background-size: 230px;
-}
-
-#tribute{
-background: url('https://dl.dropboxusercontent.com/s/1quf008ytj2kkkv/Screenshot%202016-11-17%20at%2010.31.23%20PM.png?dl=0') no-repeat;
-  background-size: 250px;
-}
-
-#flowers{
-background: url('https://dl.dropboxusercontent.com/s/m7emc8jbv8wg9l0/Screenshot%202016-11-17%20at%2010.34.51%20PM.png?dl=0') 0px 0px no-repeat;
-  background-size: 310px;
-}
-
-#tictactoe{
-background: url('https://dl.dropboxusercontent.com/s/r8ouwbgh5fxlsti/tic-tac-toe.png?dl=0') -9px 0px no-repeat;
-  background-size: 260px;
-}
-
-#quotes{
-background: url('https://dl.dropboxusercontent.com/s/7ehsbnd4i5ns7gw/quotes.png?dl=0') -10px 3px no-repeat;
-  background-size: 260px;
-}
-
-#simon{
-background: url('https://dl.dropboxusercontent.com/s/boeayjpxtqgopyo/simon.png?dl=0') -10px 0px no-repeat;
-  background-size: 260px;
-}
-
-#twitchtv{
-background: url('https://dl.dropboxusercontent.com/s/qeujpu7grwcwit9/TwitchTV_app.png?dl=0') -10px 0px no-repeat;
-  background-size: 260px;
-}
-
-#pic{
-    background: url(img/profile.png) -40px -10px no-repeat;
-}
-
-#dnd{
-  background: url(img/projects/dnd.png) -24px -0px no-repeat;
-  background-size: 290px;
-  
 }
 
 a, a:hover{
@@ -213,16 +100,8 @@ a, a:hover{
   text-align: center;
 }
 
-
-h2 {
-  text-align: center;
-  color: #FFF;
-  font-size: 2em;
-  font-weight: 900;
-}
-
-h3{
-  text-align: center;
-  color: #FFF;
-  font-weight: 900;
+#test{
+  background: #f00;
+  width: 300px;
+  height: 250px;
 }
