--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,11 @@ body {
   font-size: 17px; 
   font-weight: 900;
   font-family: 'Lato', sans-serif;
+  background-color: #F00;
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
+
+
 
 nav {
     font-family: Arial;
@@ -102,11 +106,6 @@ a, a:hover{
   text-align: center;
 }
 
-#test{
-  background: #f00;
-  width: 300px;
-  height: 250px;
-}
 
 /* Slideshow container */
 .slideshow-container {
