--- a/styles.css
+++ b/styles.css
@@ -1,171 +1,135 @@
 body {
-  font-size: 17px; 
-  font-weight: 900;
-  font-family: 'Lato', sans-serif;
+    font-size: 17px;
+    font-weight: 900;
+    font-family: 'Lato', sans-serif;
 }
-
-.bg{
+.bg {
     background-color: #001dd6;
-  background-image: url("images/fabric-plaid.png");
-/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
-
+    background-image: url("images/fabric-plaid.png");
 }
-
-
 nav {
     font-family: Arial;
     width: 100%;
     background: #006;
     color: #FFF;
     font-weight: 900;
+    margin-bottom: 5%;
 }
-
-
-
-h3{
-  font-size: 1em;
+h3 {
+    font-size: 1em;
 }
-
-
-
-#logo-tagline{
-  text-align: center;
-  float: right;
-  font-family: 'Cinzel Decorative', cursive;
-
-}
-
-
-#nav-buttons > a {
-  
-  display: inline-block;
-  color: #FFF;
-  background: #006;
-  text-align: center;
-  text-decoration: none;
-  font-size: 1em;
-  line-height: 60px;
-  font-family: 'Cinzel Decorative', cursive;
-  z-index: 100;
-  -webkit-transition:all .4s ease-in;
-}
-
-#contact-container {
-  text-align: center;
-  width: 100%;
-  display: none;
-}
-
-#contact{
-  margin: 0 auto;
-
-}
-
-#contact > a {
-  background-color: #000;
-  width: 125px;
-  height: 125px;
-  margin: 25px;
-  text-decoration: none;
+ol > li {
   list-style-type: none;
-  border-radius: 15px;
-  display: inline-block;
-  border: 5px solid white;
-  line-height: 50px;
-  
+}
+#logo-tagline {
+    text-align: center;
+    float: right;
+    font-family: 'Cinzel Decorative', cursive;
+}
+#nav-buttons > a {
+    display: inline-block;
+    color: #FFF;
+    background: #006;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1em;
+    line-height: 60px;
+    font-family: 'Cinzel Decorative', cursive;
+    z-index: 100;
+    -webkit-transition: all .4s ease-in;
+}
+#contact-form{
+    background: #006;
+    padding: 25px;
+    color: #FFF;
+    position: relative;
+}
+#contact-container {
+    text-align: center;
+    width: 100%;
+    display: none;
+}
+#contact {
+    margin: 0 auto;
+}
+#contact > a {
+    background-color: #000;
+    width: 125px;
+    height: 125px;
+    margin: 25px;
+    text-decoration: none;
+    list-style-type: none;
+    border-radius: 15px;
+    display: inline-block;
+    border: 5px solid white;
+    line-height: 50px;
+}
+#nav-buttons > a:hover {
+    background: #FFF;
+    color: #00F;
+}
+#products {
+    padding-bottom: 200px;
+    color: #FFF;
+    display: block;
+    text-align: center;
+    font-size: 1.4em;
+    font-weight: 900;
+    margin: 0 auto;
+    width: 80%;
 }
 
-
-#nav-buttons > a:hover{
-  background: #FFF;
-  color: #00F; 
+.email-form-container{
+    margin: 0 auto;
+    width: 100%;
+    display: inline-block;
 }
-
-
-#products{
-  padding-bottom: 200px;
-  color: #FFF;
-  text-align: center;
-  font-size: 1.4em;
-  font-weight: 900;
-  margin: 0 auto;
-  width: 80%;
-}
-
 .info {
-  background: #000;
-  color: #fff;
-  overflow: hidden;
-  height: 100%;
-  border-radius: 15px;
+    background: #000;
+    color: #fff;
+    overflow: hidden;
+    height: 100%;
+    border-radius: 15px;
 }
-
-a, a:hover{
-  text-decoration: none;
-  color: #FFF;
+a,
+a:hover {
+    text-decoration: none;
+    color: #FFF;
 }
-
-.center{
-  margin: 0 auto;
-  text-align: center;
+.center {
+    margin: 0 auto;
+    text-align: center;
 }
-
-
 /* Slideshow container */
+
 .slideshow-container {
-  position: relative;
-  margin: auto;
+    position: relative;
+    margin: auto;
 }
-
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  background: #00F;
-  opacity: 0.4;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  text-decoration: none;
-}
-
 img {
-  width: 100%;
+    width: 100%;
 }
-
-
 /* Fading animation */
+
 .fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
-
 @-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
-
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
