--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,3 +1,4 @@
+@media only screen and (max-width: 600px) {
  body {
      font: 400 15px Lato, sans-serif;
      line-height: 1.8;
@@ -72,10 +73,7 @@
  .bg-grey {
      background-color: #f6f6f6;
  }
- .bg {
-    background-color: #006;
-    background-image: url("../images/fabric-plaid.png");
-}
+
  
  .logo-small {
      color: #006;
@@ -85,16 +83,7 @@
      color: #006;
      font-size: 200px;
  }
- .thumbnail {
-     padding: 0 0 15px 0;
-     border: none;
-     border-radius: 0;
- }
- .thumbnail img {
-     width: 100%;
-     height: 100%;
-     margin-bottom: 10px;
- }
+ 
  .carousel-control.right,
  .carousel-control.left {
      background-image: none;
@@ -116,45 +105,9 @@
  .item span {
      font-style: normal;
  }
-
- .navbar {
-     margin-bottom: 0;
-     background: #006;
-     z-index: 9999;
-     border: 0;
-     font-size: 12px !important;
-     line-height: 1.42857143 !important;
-     letter-spacing: 4px;
-     border-radius: 0;
-     font-family: 'Cinzel Decorative', cursive;
- }
- .navbar li a,
- .navbar .navbar-brand {
-     color: #fff !important;
- }
- .navbar-nav li a:hover,
- .navbar-nav li.active a {
-     color: #f4511e !important;
-     background-color: #fff !important;
- }
- .navbar-default .navbar-toggle {
-     border-color: transparent;
-     color: #fff !important;
- }
- .slideanim {
-     visibility: hidden;
  }
  
- .glyphicon-chevron-left, .glyphicon-chevron-right, .blue {
-     color: #006;
- }
- .slide {
-     animation-name: slide;
-     -webkit-animation-name: slide;
-     animation-duration: 1s;
-     -webkit-animation-duration: 1s;
-     visibility: visible;
- }
+ 
  @keyframes slide {
      0% {
          opacity: 0;
