--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
     background-image: url("../images/fabric-plaid.png");
 }
  .navbar {
-     margin-bottom: 0;
+     padding: 10px;
      background: #006;
      z-index: 9999;
      border: 0;
@@ -41,7 +41,16 @@
      -webkit-animation-duration: 1s;
      visibility: visible;
  }
-
+ .carousel-control {
+     background-image: none;
+     color: #006;
+ }
+ .carousel-indicators li {
+     border-color: #006 !important;
+ }
+ .carousel-indicators li.active {
+     background-color: #006 !important;
+ }
 
  
  body {
@@ -67,46 +76,37 @@
      font-weight: 400;
      margin-bottom: 30px;
  }
- .baby-icon{
-     background: url('../images/baby.jpg') no-repeat -30px 0px;
+ .icon-holder > :first-child{
+     background-size: cover;
      width: 150px;
      height: 150px;
      border-radius: 100px;
      margin: 0 auto;
  }
+ .baby-icon{
+     background: url('../images/baby.jpg') no-repeat -30px 0px;
+ }
  .pikachu-icon{
-      background: url('../images/pikachu.jpg') no-repeat -10px 0px;
-     width: 150px;
-     height: 150px;
-     border-radius: 100px;
-     margin: 0 auto;   
+     background: url('../images/pikachu.jpg') no-repeat -10px 0px;
  }
   .mask-icon{
-      background: url('../images/cthulhu.jpg') no-repeat;
-     width: 150px;
-     height: 150px;
-     border-radius: 100px;
-     margin: 0 auto;   
+     background: url('../images/cthulhu.jpg') no-repeat;
+  
  }
   .flower-icon{
-      background: url('../images/flower-icon.jpg') no-repeat;
-     width: 150px;
-     height: 150px;
-     border-radius: 100px;
-     margin: 0 auto;   
+     background: url('../images/flower-icon.jpg') no-repeat;
  }
    .doily-icon{
-      background: url('../images/doily.jpg') no-repeat;
-     width: 150px;
-     height: 150px;
-     border-radius: 100px;
-     margin: 0 auto;   
+     background: url('../images/doily.jpg') no-repeat;
  }
+ 
  .jumbotron {
+     margin-top: 69px !important;
      color: #fff;
-     padding: 100px 25px;
+     padding: 0px !important;
      font-family: Montserrat, sans-serif;
  }
+
  .bouquet-bg{
      background-image: url('../images/rose.jpg');
      background-size: cover;
@@ -126,27 +126,6 @@
      color: #006;
      font-size: 200px;
  }
- .thumbnail {
-     padding: 0 0 15px 0;
-     border: none;
-     border-radius: 0;
- }
- .thumbnail img {
-     width: 100%;
-     height: 100%;
-     margin-bottom: 10px;
- }
- .carousel-control.right,
- .carousel-control.left {
-     background-image: none;
-     color: #f4511e;
- }
- .carousel-indicators li {
-     border-color: #f4511e;
- }
- .carousel-indicators li.active {
-     background-color: #f4511e;
- }
  .item h4 {
      font-size: 19px;
      line-height: 1.375em;
@@ -157,6 +136,15 @@
  .item span {
      font-style: normal;
  }
+ 
+ .dd-logo{
+     height: 50px;
+     width: 200px;
+     background: url('../images/dd_logo.jpg') no-repeat;
+     background-size: cover;
+
+ }
+ 
 
  @keyframes slide {
      0% {
