--- a/styles/main.css
+++ b/styles/main.css
@@ -88,7 +88,9 @@
      width: 100%;
  }
  a > h4{
-     color: #006;
+     margin-left: 30px;
+     text-align: left;
+     color: #FFF;
      text-decoration: none;
      font-size: 2em;
  }
@@ -101,12 +103,13 @@
     padding-top: 60px;
 }
  .info {
-  background: #000;
-  color: #fff;
-  min-height: 300px;
   min-width: 100%;
   padding: 0px;
-  margin: 0 auto;
+  margin-left: 30px;
+  text-align: left;
+  color: #FFF; 
+  text-decoration: none;
+  font-size: 1.3em; 
 }
  #category-container > a{
     min-height: 300px;
